--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.10.3",
     "swr": "^2.2.4"
   },
